<resources>
    <string name="app_name">morseProject</string>
    <string name="action_settings">Settings</string>
    <string name="game_title">reMorseless Teacher</string>
    <string name="tutorial_button">Tutorial</string>
    <string name="easy_button">Easy Mode</string>
    <string name="difficult_mode">Difficult Mode</string>
    <string name="alphabet_picture">Alphabet</string>
    <string name="tutorial_finished_dialog_title">Congratulations!</string>
    <string name="tutorial_finished_dialog_body">You have finished the tutorial. Go and try the Easy Mode now!</string>
    <string name="OK">OK</string>
    <string name="easy_mode_dialog_title">Congratulations!</string>
    <string name="easy_mode_dialog_body">You have finished the Easy Mode. Go and try the Difficult Mode now!</string>
    <string name="difficult_mode_dialog_title">Congratulations!</string>
    <string name="difficult_mode_dialog_body">You have finished the Difficult Mode.</string>
    <string name="best_scores_button">Best Scores</string>
    <string name="best_scores_label">Best Scores</string>
    <string name="game_finished_title">Hold your finger!</string>
    <string name="game_finished_body">Your score is: </string>
    <string name="help_button">?</string>
    <string name="help_dialog_title">Need some help?</string>
    <string name="game_paused_title">Game Paused</string>
    <string name="menu_button">Menu</string>
    <string name="help_button_game">Help</string>
    <string name="help_dialog_body">-If you are a beginner try Tutorial \n \n-Too easy? Try Easy Mode and put whole words \n \n-Need some challange? Press Difficult Mode button and get some points with limited time and no hints. \n \n-Check your improvments in Best Scores section</string>

</resources>
