<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="250dp">

        <Button
            android:id="@+id/help_button"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginLeft="58dp"
            android:layout_marginRight="58dp"
            android:paddingBottom="10sp"
            android:text="@string/help_button" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:paddingBottom="50sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/alphabet_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginLeft="58dp"
        android:text="@string/alphabet_picture"/>

    <Button
        android:id="@+id/tutorial_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginLeft="58dp"
        android:text="@string/tutorial_button"/>
    <Button
        android:id="@+id/easy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginLeft="58dp"
        android:text="@string/easy_button"/>
    <Button
        android:id="@+id/difficult_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginLeft="58dp"
        android:text="@string/difficult_mode"/>

    <Button
        android:id="@+id/best_scores_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginLeft="58dp"
        android:text="@string/best_scores_button"
        android:layout_marginBottom="150dp"/>






</LinearLayout>